# oneline-chat

./: .gitignore  README.md  docker-compose.yml
agents/: Caddyfile  README.md
agents/brd_agent/: README.md  brd_agent.py
agents/prd_agent/: README.md  prd_agent.py  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  oneline_chat.http  pydantic_text.py  pyproject.toml  requirements.txt  run_tests.sh
backend/scripts/: migrate_auth.py  migrate_chat_history.py  migrate_multi_agent.py  migrate_shared_chats.py  migrate_user_id_type.py
backend/src/oneline_chat/: __init__.py  app.py  main.py
backend/src/oneline_chat/api/: __init__.py  agent_router.py  auth_router.py  chat_router.py
backend/src/oneline_chat/core/: anonymous_session.py  application.py  auth_utils.py  config.py  logging.py
backend/src/oneline_chat/db/: __init__.py  database.py  models.py  repository.py
backend/src/oneline_chat/services/: __init__.py  agent_registry.py  ai_client.py
backend/tests/: __init__.py
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: ChatInterface.tsx  ChatSettings.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  ShareModal.tsx  SharedChatViewer.tsx
ui/src/components/agents/: AgentDetails.tsx  AgentModal.tsx  AgentSidebar.tsx  AgentTriggerButton.tsx  index.ts
ui/src/components/auth/: AuthModal.tsx  LoginForm.tsx  PrivateRoute.tsx  RegisterForm.tsx  UserProfile.tsx
ui/src/components/chat-history/: ChatHistoryItem.tsx  ChatHistoryPanel.tsx  ChatSearchBar.tsx
ui/src/config/: api.ts  axios.ts
ui/src/contexts/: AuthContext.tsx  ChatHistoryContext.tsx
ui/src/hooks/: useAgentSelection.ts  useAgents.ts
ui/src/services/: api.ts  auth.ts  chat-history.ts
ui/src/types/: api.ts  auth.ts  chat-history.ts  chat.ts
